objects/Asset.object
<CustomObject>
    <fields>
        <fullName>SBQQ__RegularPrice__c</fullName>
        <description>Regular Price for this Asset.</description>
        <inlineHelpText>Regular Price for this Asset.</inlineHelpText>
        <label>Regular Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredByAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent Asset. If populated, this Asset is a child in a bundle.</inlineHelpText>
        <label>Required By Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Required By Asset)</relationshipLabel>
        <relationshipName>ChildAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredById__c</fullName>
        <description>The Id of the parent record that requires this record.</description>
        <inlineHelpText>The Id of the parent record that requires this record.</inlineHelpText>
        <label>Required By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredByProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Product of this Asset.</description>
        <inlineHelpText>Parent Product of this Asset.</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Child Assets</relationshipLabel>
        <relationshipName>ChildAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBySubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent Subscription. If populated, this Asset is a child in a bundle.</inlineHelpText>
        <label>Required By Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Assets (Required By Subscription)</relationshipLabel>
        <relationshipName>ChildAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RevisedAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revised Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Revised Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RootAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ultimate bundle parent of this Asset</description>
        <inlineHelpText>Ultimate bundle parent of this Asset</inlineHelpText>
        <label>Root Asset (CPQ)</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (RootAsset)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RootId__c</fullName>
        <description>The ID of the subscription or asset at the root of the bundle that contains this asset</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the subscription or asset at the root of the bundle that contains this asset</inlineHelpText>
        <label>Root Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentLabel__c</fullName>
        <description>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</description>
        <inlineHelpText>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</inlineHelpText>
        <label>Segment Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionEndDate__c</fullName>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Assets (Quote Line)</relationshipLabel>
        <relationshipName>Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionStartDate__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscribed Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term. This is useful when you want to show a breakdown of payments in separate groups, for different terms, yet you want to discount reflected for the entire duration of the subscription. Leave Term Discount Level blank if you want discount schedules applied based on the term of each line item.</description>
        <inlineHelpText>Schedule for discounts based on subscription term. Setting this to &quot;Group&quot; applies the discount rate for the group term, while setting it to &quot;Quote&quot; applies the discount rate for the entire quote term, regardless of the different terms in your groups.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Assets (Term Discouned)</relationshipLabel>
        <relationshipName>TermDiscountedAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnitCost__c</fullName>
        <description>Unit Cost for this Asset.</description>
        <inlineHelpText>Unit Cost for this Asset.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__VirtualAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Virtual Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Virtual Asset)</relationshipLabel>
        <relationshipName>VirtualAsset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCOD_text__c</fullName>
        <description>Formula field to convert SCOD to text type</description>
        <formula>TEXT( Acorn_SCOD__c )</formula>
        <label>SCOD text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saturday_Frequency__c</fullName>
        <label>Saturday Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_A_Override__c</fullName>
        <label>Schedule A Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Type__c</fullName>
        <formula>IF(ISPICKVAL( Occurrence_Type__c ,&quot;Scheduled&quot;),&quot;Scheduled&quot;,
IF(ISPICKVAL( Occurrence_Type__c , &quot;Scheduled On-Call&quot;), &quot;Scheduled&quot;,
IF(ISPICKVAL( Occurrence_Type__c , &quot;On Call&quot;), &quot;On Call&quot;,null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_Schedule_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Schedule A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sensitivity_Code__c</fullName>
        <description>SCode for Container</description>
        <label>Sensitivity Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAM</fullName>
                </value>
                <value>
                    <fullName>CTY</fullName>
                </value>
                <value>
                    <fullName>FRCH</fullName>
                </value>
                <value>
                    <fullName>UTL</fullName>
                </value>
                <value>
                    <fullName>LL</fullName>
                </value>
                <value>
                    <fullName>RCPT</fullName>
                </value>
                <value>
                    <fullName>EXCT</fullName>
                </value>
                <value>
                    <fullName>SPL</fullName>
                </value>
                <value>
                    <fullName>BROKOP</fullName>
                </value>
                <value>
                    <fullName>BROKFR</fullName>
                </value>
                <value>
                    <fullName>BROKCT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Header_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to Link Service Detail to Service Header, will be populated with the same values as ParentID. Needed for SDG_Enhanced Grids</description>
        <label>Service Header ID</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Info__c</fullName>
        <label>Service Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sunday_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunday_Frequency__c</fullName>
        <label>Sunday Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets (Supplier)</relationshipLabel>
        <relationshipName>Assets_Supplier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Third_Party_Source__c</fullName>
        <label>3rd Party Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thursday_Frequency__c</fullName>
        <label>Thursday Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_of_Day_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time of Day AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_of_Day_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time of Day PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuesday_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuesday_Frequency__c</fullName>
        <label>Tuesday Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Account_Number__c</fullName>
        <label>Vendor Account Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_BU__c</fullName>
        <description>Asset&apos;s Supplier -&gt; Vendor BU.</description>
        <formula>Supplier__r.Vendor_Business_Unit__c</formula>
        <label>Vendor BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <description>Vendor who performs the service there Vendor ID/Code.</description>
        <formula>Supplier__r.AccountNumber</formula>
        <label>Vendor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Service_Number__c</fullName>
        <label>Vendor Service Number</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voice_Prompt__c</fullName>
        <description>This is used to store the voice prompt value for IVR.</description>
        <label>Voice Prompt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waste_Profile__c</fullName>
        <label>Waste Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wednesday_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wednesday_Frequency__c</fullName>
        <label>Wednesday Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wednesday_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weekly_Frequency__c</fullName>
        <label>Weekly Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.FAMILY_ENUM</columns>
        <columns>End_Date__c</columns>
        <columns>Duration__c</columns>
        <columns>Occurrence_Type__c</columns>
        <columns>Has_Extra_Pickup__c</columns>
        <columns>Service_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY_ENUM</field>
            <operation>equals</operation>
            <value>Commercial</value>
        </filters>
        <filters>
            <field>Occurrence_Type__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <filters>
            <field>Occurs__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Weekly</value>
        </filters>
        <filters>
            <field>Weekly_Frequency__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <filters>
            <field>Quantity__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Assets</label>
    </listViews>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>Service_Type__c</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.NAME</field>
            <operation>contains</operation>
            <value>Compactor</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>FAM</value>
        </filters>
        <label>All Assets</label>
    </listViews>
    <listViews>
        <fullName>All_Asset_Headers</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Supplier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY_ENUM</field>
            <operation>equals</operation>
            <value>Rolloff</value>
        </filters>
        <filters>
            <field>Occurrence_Type__c</field>
            <operation>equals</operation>
            <value>On-Call</value>
        </filters>
        <label>All Asset Headers</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Service_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Type__c</field>
            <operation>equals</operation>
            <value>Services</value>
        </filters>
        <label>Data Migration Team View</label>
    </listViews>
    <recordTypes>
        <fullName>Service_Detail</fullName>
        <active>true</active>
        <description>Service Detail (SBID)</description>
        <label>Service Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Header</fullName>
        <active>true</active>
        <description>Service Header (SID)</description>
        <label>Service Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Request</fullName>
        <active>true</active>
        <description>A record type to capture requested asset changes or new assets</description>
        <label>Service Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_check_on_Asset_and_Project</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($User.Bypass_Validation__c),
NOT(ISBLANK(Project_Code__c)),
NOT(ISBLANK(Project_Code__r.Client_Account__c)),
RecordType.DeveloperName  = &quot;Service_Header&quot;,
Account.ParentId  &lt;&gt;  Project_Code__r.Client_Account__c  
)</errorConditionFormula>
        <errorMessage>Client Account on Asset and Project should be same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Asset_Name_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.Bypass_Validation__c), ISCHANGED(Name))</errorConditionFormula>
        <errorMessage>Asset Name is not an editable field.</errorMessage>
    </validationRules>
</CustomObject>